created movable box

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <script src="scripts/main.js"></script>
+            <canvas id="gameCanvas"></canvas>
+            <!-- <button id="quit">Quit</button> -->
+    <script src="scripts/functions.js"></script>
 </body>
 </html>
